RC 4
====

- Check for required Properties before determining the Handlers initial state

- Fixed IoC-87
  "DefaultComplextConverter does not properly handle nested components"

- Applied Lee Henson's patch fixing IOC-86
  "Additional generic AddComponent overloads"

- Applied Ido Samuelson patch fixing IOC-85
  "IKernel to support generics to add/resolve components."

- Refactored proxy options support. Now you can use the attribute 'marshalByRefProxy' 
  on the external configuration, or the ComponentProxyBehaviorAttribute

- Fixed IOC-79
  "Kernel.GetHandlers(Type) does not consider generic handlers when satisfying the type"

- Updated StartableFacilityTestCase to correctly demonstrate the facility and
  added a unit test to demonstrate IOC-80
 
- Applied Alex Henderson's patch that makes the ComponentModel available
  to the ILifestyleManager

- Applied Adam Mills's patch fixing IOC-74
  "BinaryComponentName VisitNode null check"

- Fixed IOC-67
  "RemoveComponent needs to unwire handlers and remove them"

- Fixed IOC-59
  "Child component unable to correctly resolve parent service added after the component"

- Fixed IOC-47
  "Components created by FactoryActivator have their dependencies checked"

- Applied Marcus Widerberg's patch fixing FACILITIES-84
  "FactorySupport - Allow parameters to factory method to be set at resolvetime"

- Applied Marcus Widerberg's patch fixing FACILITIES-82
  "Programmatic configuration for FactorySupport"

- Reverted by Henry -> Apply patch from Sam Camp that fixes problems with Remoting Facility Sample and RecoverableComponent. 

- Updated TypedFactoryFacility to not require a target instance
  when proxying.

- Added Windsor proxy support to create proxies without targets.

- Removed relationship between ProxyOptions and ProxyGeneration options
  and moved ProxyOptions into the MicroKernel.  ProxyGeneration options
  are created from the ProxyOptions and will probably need to be updated